syntax = "proto3";

package gameData;

message dataStrut
{
    int32 gameId = 1;
    int32 accountID = 2;
    string info =3;
}